--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,9 @@ jobs:
       - name: Étape 1 - Initialisation 
         run: echo "STEP1 = $STEP1" 
 
+
       - name: Étape 2 - Récupération du code 
-        run: echo "Récupération du code..."
+        run: echo "STEP2 = $ {{vars.STEP2}}"
 
       - name: Étape 3 - Build 
         run: echo "Build en cours..."
